migrate to java 14 and make use of instanceof pattern-matching